@@ -1,3 +1,5 @@
+2006/1/1 -- released version 20060101_trunk
+
 2005/12/31 -- released version 20051231_trunk
 
 2005/12/30 -- released version 20051230_trunk
